--- a/index.html
+++ b/index.html
@@ -1,1 +1,67 @@
 My Page
+
+<h1 id="sistemas-y-tecnologias-web">Sistemas y Tecnologias Web</h1>
+
+
+
+<h2 id="pasos-a-seguir">Pasos a seguir:</h2>
+
+
+
+<h2 id="1-darse-de-alta-en-comunidad-google">1. Darse de alta en comunidad Google+</h2>
+
+
+
+<div class="flow-chart"><svg height="474.75" version="1.1" width="234.5" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="overflow: hidden; position: relative; top: -0.46875px;"><desc style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Created with Raphaël 2.1.2</desc><defs style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"><path stroke-linecap="round" d="M5,0 0,2.5 5,5z" id="raphael-marker-block" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></path><marker id="raphael-marker-endblock33-obj8" markerHeight="3" markerWidth="3" orient="auto" refX="1.5" refY="1.5" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#raphael-marker-block" transform="rotate(180 1.5 1.5) scale(0.6,0.6)" stroke-width="1.6667" fill="black" stroke="none" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></use></marker><marker id="raphael-marker-endblock33-obj9" markerHeight="3" markerWidth="3" orient="auto" refX="1.5" refY="1.5" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#raphael-marker-block" transform="rotate(180 1.5 1.5) scale(0.6,0.6)" stroke-width="1.6667" fill="black" stroke="none" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></use></marker><marker id="raphael-marker-endblock33-obj10" markerHeight="3" markerWidth="3" orient="auto" refX="1.5" refY="1.5" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#raphael-marker-block" transform="rotate(180 1.5 1.5) scale(0.6,0.6)" stroke-width="1.6667" fill="black" stroke="none" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></use></marker><marker id="raphael-marker-endblock33-obj12" markerHeight="3" markerWidth="3" orient="auto" refX="1.5" refY="1.5" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#raphael-marker-block" transform="rotate(180 1.5 1.5) scale(0.6,0.6)" stroke-width="1.6667" fill="black" stroke="none" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></use></marker></defs><rect x="0" y="0" width="206" height="37" rx="20" ry="20" fill="#ffffff" stroke="#000000" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);" stroke-width="2" class="flowchart" id="st" transform="matrix(1,0,0,1,4,35.75)"></rect><text x="10" y="18.5" text-anchor="start" font-family="sans-serif" font-size="14px" stroke="none" fill="#000000" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); text-anchor: start; font-family: sans-serif; font-size: 14px; font-weight: normal;" id="stt" class="flowchartt" font-weight="normal" transform="matrix(1,0,0,1,4,35.75)"><tspan dy="5.5" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Unirse a comunidad google+</tspan></text><rect x="0" y="0" width="120" height="37" rx="0" ry="0" fill="#ffffff" stroke="#000000" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);" stroke-width="2" class="flowchart" id="op" transform="matrix(1,0,0,1,47,158.5)"></rect><text x="10" y="18.5" text-anchor="start" font-family="sans-serif" font-size="14px" stroke="none" fill="#000000" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); text-anchor: start; font-family: sans-serif; font-size: 14px; font-weight: normal;" id="opt" class="flowchartt" font-weight="normal" transform="matrix(1,0,0,1,47,158.5)"><tspan dy="5.5" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">introducir datos</tspan></text><path fill="#ffffff" stroke="#000000" d="M50.25,25.125L0,50.25L100.5,100.5L201,50.25L100.5,0L0,50.25" stroke-width="2" font-family="sans-serif" font-weight="normal" id="cond" class="flowchart" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); font-family: sans-serif; font-weight: normal;" transform="matrix(1,0,0,1,6.5,249.5)"></path><text x="55.25" y="50.25" text-anchor="start" font-family="sans-serif" font-size="14px" stroke="none" fill="#000000" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); text-anchor: start; font-family: sans-serif; font-size: 14px; font-weight: normal;" id="condt" class="flowchartt" font-weight="normal" transform="matrix(1,0,0,1,6.5,249.5)"><tspan dy="5.5" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">login ull.edu.es?</tspan><tspan dy="18" x="55.25" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></tspan></text><rect x="0" y="0" width="46" height="37" rx="20" ry="20" fill="#ffffff" stroke="#000000" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);" stroke-width="2" class="flowchart" id="e" transform="matrix(1,0,0,1,84,435.75)"></rect><text x="10" y="18.5" text-anchor="start" font-family="sans-serif" font-size="14px" stroke="none" fill="#000000" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); text-anchor: start; font-family: sans-serif; font-size: 14px; font-weight: normal;" id="et" class="flowchartt" font-weight="normal" transform="matrix(1,0,0,1,84,435.75)"><tspan dy="5.5" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">End</tspan></text><path fill="none" stroke="#000000" d="M107,72.75C107,72.75,107,140.32125449180603,107,155.49839173117653" stroke-width="2" marker-end="url(#raphael-marker-endblock33-obj8)" font-family="sans-serif" font-weight="normal" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); font-family: sans-serif; font-weight: normal;"></path><path fill="none" stroke="#000000" d="M107,195.5C107,195.5,107,235.15409994125366,107,246.50043908460066" stroke-width="2" marker-end="url(#raphael-marker-endblock33-obj9)" font-family="sans-serif" font-weight="normal" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); font-family: sans-serif; font-weight: normal;"></path><path fill="none" stroke="#000000" d="M107,350C107,350,107,417.57125449180603,107,432.7483917311765" stroke-width="2" marker-end="url(#raphael-marker-endblock33-obj10)" font-family="sans-serif" font-weight="normal" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); font-family: sans-serif; font-weight: normal;"></path><text x="112" y="360" text-anchor="start" font-family="sans-serif" font-size="14px" stroke="none" fill="#000000" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); text-anchor: start; font-family: sans-serif; font-size: 14px; font-weight: normal;" font-weight="normal"><tspan dy="5.5" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">yes</tspan></text><path fill="none" stroke="#000000" d="M207.5,299.75C207.5,299.75,232.5,299.75,232.5,299.75C232.5,299.75,232.5,133.5,232.5,133.5C232.5,133.5,107,133.5,107,133.5C107,133.5,107,148.87344455718994,107,155.50924777425826" stroke-width="2" marker-end="url(#raphael-marker-endblock33-obj12)" font-family="sans-serif" font-weight="normal" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); font-family: sans-serif; font-weight: normal;"></path><text x="212.5" y="289.75" text-anchor="start" font-family="sans-serif" font-size="14px" stroke="none" fill="#000000" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); text-anchor: start; font-family: sans-serif; font-size: 14px; font-weight: normal;" font-weight="normal"><tspan dy="5.5" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">no</tspan></text></svg></div>
+
+<blockquote>
+  <p><strong>Note:</strong></p>
+  
+  <ul>
+  <li>Es requisito indispensable tener un correo de la universidad de la laguna</li>
+  </ul>
+</blockquote>
+
+
+
+<h2 id="2-instalar-nodejs">2. Instalar node.JS</h2>
+
+<p>Para ello iremos a la pagina oficial y descaremos el archivo dmg que instalaremos en mi caso en la version Mac Os X. <br>
+<img src="images/a.PNG" alt="" title=""></p>
+
+<p>*npm funciona correctamente.</p>
+
+
+
+<h2 id="3-instalar-express">3. Instalar Express</h2>
+
+<p>Dentro del directorio de trabajo debemos ejecutar la siguiente linea: <br>
+npm install express –save</p>
+
+<blockquote>
+  <p><strong>Note:</strong></p>
+  
+  <ul>
+  <li>Deberemos seguir una serie de pasos donde deberemos escribir lo que se nos pida.</li>
+  </ul>
+</blockquote>
+
+
+
+<h2 id="4-instalar-github">4. Instalar Github</h2>
+
+<p>En mi caso he instalado la app para Mac. <br>
+<img src="images/b.PNG" alt="" title=""></p>
+
+
+
+<h2 id="5-instalar-atom">5. Instalar Atom</h2>
+
+<p>Debemos realizar los mismos pasos que el apartado anterior pero para atom.</p>
+
+
+
+<h2 id="5-conversos-markdown-a-html">5. Conversos Markdown a html</h2>
+
+<p>En mi caso estoy utilizando un editor online llamado stackedit <br>
+<img src="images/c.PNG" alt="" title=""></p>
